@@ -117,7 +117,7 @@
   <target name="test" depends="clean-test,jar">
     <iterate target="test"/>
   </target>
-	
+
   <!-- create an html report from junit output files -->
   <target name="testreport">
     <junitreport todir="${test.build.dir}">
@@ -166,7 +166,6 @@
     <copy file="${hive.root}/bin/hive-config.sh" todir="${target.bin.dir}"/>
     <copy file="${basedir}/conf/hive-default.xml" todir="${target.conf.dir}"/>
     <copy file="${basedir}/conf/hive-log4j.properties" todir="${target.conf.dir}"/>
-    <copy file="${basedir}/conf/jpox.properties" todir="${target.conf.dir}"/>
     <copy todir="${target.lib.dir}/php">
       <fileset dir="${hive.root}/serde/src/gen-php" excludes="**/.svn"/>
       <fileset dir="${hive.root}/metastore/src/gen-php" excludes="**/.svn"/>
