@@ -21,36 +21,6 @@ begin_import
 import|import
 name|java
 operator|.
-name|io
-operator|.
-name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|InputStream
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|net
-operator|.
-name|URL
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
 name|util
 operator|.
 name|ArrayList
@@ -892,110 +862,12 @@ condition|)
 block|{
 return|return;
 block|}
-name|URL
-name|url
-init|=
-name|classLoader
-operator|.
-name|getResource
-argument_list|(
-name|JPOX_CONFIG
-argument_list|)
-decl_stmt|;
 name|prop
 operator|=
 operator|new
 name|Properties
 argument_list|()
 expr_stmt|;
-if|if
-condition|(
-name|url
-operator|==
-literal|null
-condition|)
-block|{
-name|LOG
-operator|.
-name|info
-argument_list|(
-name|JPOX_CONFIG
-operator|+
-literal|" not found."
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-name|LOG
-operator|.
-name|info
-argument_list|(
-literal|"found resource "
-operator|+
-name|JPOX_CONFIG
-operator|+
-literal|" at "
-operator|+
-name|url
-argument_list|)
-expr_stmt|;
-try|try
-block|{
-name|InputStream
-name|is
-init|=
-name|url
-operator|.
-name|openStream
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|is
-operator|==
-literal|null
-condition|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"Properties file "
-operator|+
-name|url
-operator|+
-literal|" couldn't be opened"
-argument_list|)
-throw|;
-block|}
-name|prop
-operator|.
-name|load
-argument_list|(
-name|is
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|ex
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"could not load: "
-operator|+
-name|JPOX_CONFIG
-argument_list|,
-name|ex
-argument_list|)
-throw|;
-block|}
-block|}
 name|Iterator
 argument_list|<
 name|Map
@@ -1046,7 +918,7 @@ argument_list|()
 operator|.
 name|contains
 argument_list|(
-literal|"jpox"
+literal|"datanucleus"
 argument_list|)
 operator|||
 name|e
